--- a/package.json
+++ b/package.json
@@ -72,6 +72,6 @@
     "watch": "webpack --config webpack.config.js --watch --mode development"
   },
   "browser": "dist/umd/lib-jitsi-meet.min.js",
-  "module": "dist/esm/JitsiMeetJS.js",
+  "main": "./index.js",
   "license": "Apache-2.0"
 }
